fix spacing between nav elements

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -22,7 +22,8 @@
   }
 
   .collapse {
-    width: fit-content;
+    width: 100%;
+    justify-content: space-between;
   }
   
   .nav-item {
